--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="data:," />
     <script type="module" src="./view/lib/myGreeter.js"></script>
     <script type="module" src="./view/lib/textfield.js"></script>
-    <script type="module" src="./view/lib/modalWindow.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/gh/timonson/creaim/components/lib/modalWindow/modalWindow.js"></script>
   </head>
   <body>
     <my-greeter mood="awesome" style="margin-left: 4em;"></my-greeter>
