--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <link rel="icon" href="data:," />
     <script type="module" src="./view/lib/myGreeter.js"></script>
     <script type="module" src="./view/lib/simpleForm.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/gh/timonson/creaim/components/lib/modalWindow/modalWindow.js"></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/gh/timonson/creaim/components/lib/modalWindow/modalWindow.js"
+    ></script>
   </head>
   <body>
-    <my-greeter mood="awesome" style="margin-left: 4em;"></my-greeter>
-    <simple-form id="send" button-value="Füg hinzu!"></simple-form>
-    <simple-form id="query" button-value="Such!"></simple-form>
+    <my-greeter topic="Database" theme-color="darkturquoise"></my-greeter>
+    <simple-form id="send" button-value="Add!"></simple-form>
+    <simple-form id="query" button-value="Search!"></simple-form>
     <div>
       <simple-form
         id="display"
